Defect for alignment in IE and Edge is fixed

--- a/front-end/Assets/src/support-central-angular/src/app/app.component.scss
+++ b/front-end/Assets/src/support-central-angular/src/app/app.component.scss
@@ -79,3 +79,19 @@
         }
     }
 }
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+    .container {
+        .tile-block {
+            justify-content: space-around;
+        }
+    }
+}
+
+@supports (-ms-ime-align:auto) {
+    .container {
+        .tile-block {
+            justify-content: space-around;
+        }
+    }
+}
